--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <body>
     <table id="table">
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="resultM"></td>
+        <td onload="fun1()" id="n1"></td>
+        <td onload="fun1()" id="n2"></td>
+        <td onload="fun1()" id="n3"></td>
+        <td onload="fun2()" id="resultM1"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="resultM"></td>
+        <td onload="fun1()" id="n4"></td>
+        <td onload="fun1()" id="n5"></td>
+        <td onload="fun1()" id="n6"></td>
+        <td onload="fun3()" id="resultM2"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="resultM"></td>
+        <td onload="fun1()" id="n7"></td>
+        <td onload="fun1()" id="n8"></td>
+        <td onload="fun1()" id="n9"></td>
+        <td onload="fun4()" id="resultM3"></td>
       </tr>
       <tr id="resultN">
         <td></td>
         <td></td>
         <td></td>
-        <td class="resultM"></td>
+        <td></td>
       </tr>
     </table>
 
