--- a/index.html
+++ b/index.html
@@ -4,35 +4,12 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    
   </head>
   <body>
-    <table id="table">
-      <tr>
-        <td onload="fun1()" id="n1"></td>
-        <td onload="fun1()" id="n2"></td>
-        <td onload="fun1()" id="n3"></td>
-        <td onload="fun2()" id="resultM1"></td>
-      </tr>
-      <tr>
-        <td onload="fun1()" id="n4"></td>
-        <td onload="fun1()" id="n5"></td>
-        <td onload="fun1()" id="n6"></td>
-        <td onload="fun3()" id="resultM2"></td>
-      </tr>
-      <tr>
-        <td onload="fun1()" id="n7"></td>
-        <td onload="fun1()" id="n8"></td>
-        <td onload="fun1()" id="n9"></td>
-        <td onload="fun4()" id="resultM3"></td>
-      </tr>
-      <tr id="resultN">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <table id="table"></table>
 
+    
     <script type="text/javascript" src="java.js"></script>
   </body>
 </html>
